openturns/1.17/_sources/auto_reliability_sensitivity/design_of_experiments/plot_gauss_product_experiment.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_reliability_sensitivity/design_of_experiments/plot_gauss_product_experiment.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_gauss_product_experiment.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_gauss_product_experiment.py:


Create a Gauss product design
=============================

.. GENERATED FROM PYTHON SOURCE LINES 6-7

In this example we are going to create a deterministic weighted design experiment using Gauss product.

.. GENERATED FROM PYTHON SOURCE LINES 9-15

.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Define the underlying distribution, degrees

.. GENERATED FROM PYTHON SOURCE LINES 17-20

.. code-block:: default

    distribution = ot.ComposedDistribution([ot.Exponential(), ot.Triangular(-1.0, -0.5, 1.0)])
    marginalDegrees = [15, 8]








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Create the design

.. GENERATED FROM PYTHON SOURCE LINES 22-25

.. code-block:: default

    experiment = ot.GaussProductExperiment(distribution, marginalDegrees)
    sample = experiment.generate()








.. GENERATED FROM PYTHON SOURCE LINES 26-27

Plot the design

.. GENERATED FROM PYTHON SOURCE LINES 27-32

.. code-block:: default

    graph = ot.Graph("GP design", "x1", "x2", True, "")
    cloud = ot.Cloud(sample, "blue", "fsquare", "")
    graph.add(cloud)
    view = viewer.View(graph)
    plt.show()



.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_gauss_product_experiment_001.png
    :alt: GP design
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.104 seconds)


.. _sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_gauss_product_experiment.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_gauss_product_experiment.py <plot_gauss_product_experiment.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_gauss_product_experiment.ipynb <plot_gauss_product_experiment.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
